kubernetes/oauth2-proxy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
spec:
  rules:
    - host: code.shkar.noori.krd
      http:
        paths:
          - backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
            path: /oauth2
            pathType: Prefix
  tls:
    - hosts:
        - code.shkar.noori.krd
      secretName: ingress-cert-vscode-shkar-noori
